[metadata]
name = GDBFuzz
version = 1.0.0
description = Debugger-driven Coverage-guided Embeded Fuzzing
author = Max Eisele, Daniel Ebert

[options]
setup_requires = wheel
packages = find:
package_dir = =src
install_requires =
	pygdbmi
	ghidra-bridge
	networkx
	paho-mqtt
	attrs
	seaborn
	pandas
	matplotlib
	pyelftools
	pyserial
	pyusb
	Ninja
	setuptools
python_requires = >=3.8.0

[options.packages.find]
where = src
exclude =
	tests*

[options.entry_points]
console_scripts =
	GDBFuzz = GDBFuzz.main:main

[mypy]
exclude = src/GDBFuzz/connections/TCPConnection.py
mypy_path = $MYPY_CONFIG_FILE_DIR/src/stubs
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[coverage:run]
plugins = covdefaults
parallel = true

[flake8]
ignore = TYP001, W504
